moved lang selector to code blocks

--- a/source/api/_admin_reports.html.md.erb
+++ b/source/api/_admin_reports.html.md.erb
@@ -6,6 +6,8 @@
 ### HTTP Request 
 `GET /v3/admin_reports` 
 
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
+
 ```json
 {
   "workflows": [
