--- a/source/api/_reports.html.md.erb
+++ b/source/api/_reports.html.md.erb
@@ -6,6 +6,8 @@
 ### HTTP Request 
 `PUT /v3/reports/{id}` 
 
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
+
 ```json
 "report": {
   "requisitionIdentifier": "string",
