--- a/source/api/_webhook_endpoint_events.html.md.erb
+++ b/source/api/_webhook_endpoint_events.html.md.erb
@@ -3,6 +3,8 @@
 
 **Summary:** Get All Webhook Endpoint Events
 
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
+
 ```json
 {
   "webhook_endpoints": [{
@@ -85,6 +87,8 @@ puts response.read_body
 ## Retry Webhook Endpoint Events
 
 **Summary:** Retry webhook endpoint events
+
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```ruby
 require "uri"
