--- a/source/api/_webhook_endpoints.html.md.erb
+++ b/source/api/_webhook_endpoints.html.md.erb
@@ -3,6 +3,8 @@
 
 **Summary:** Get Webhook Endpoints
 
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
+
 ```json
 {
     "webhook_endpoint": [{
@@ -64,6 +66,8 @@ puts response.read_body
 
 **Summary:** Get a Webhook Endpoint
 
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
+
 ```json
 {
     "webhook_endpoint": {
@@ -120,6 +124,8 @@ puts response.read_body
 ## Post Webhook Endpoint 
 
 **Summary:** Create a Webhook Endpoint
+
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```json
 {
@@ -192,6 +198,8 @@ puts response.read_body
 ## Put Webhook Endpoint 
 
 **Summary:** Update a Webhook Endpoint
+
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```json
 {
