add tabs for docs, proj templates, sample labels and test panels

--- a/source/api/_project_templates.html.md.erb
+++ b/source/api/_project_templates.html.md.erb
@@ -2,6 +2,7 @@
 ## Get All Project Templates
 
 **Summary:** Get available project templates for a given organization
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```ruby
 require "uri"
