--- a/source/api/_sample_labels.html.md.erb
+++ b/source/api/_sample_labels.html.md.erb
@@ -2,6 +2,7 @@
 ## Get All Sample Labels
 
 **Summary:** Get available sample labels
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```ruby
 require "uri"
@@ -18,7 +19,6 @@ puts response.read_body
 ```
 
 ```json-doc
-// not needed
 ```
 
 ```json
