--- a/source/api/_test_panels.html.md.erb
+++ b/source/api/_test_panels.html.md.erb
@@ -2,6 +2,7 @@
 ## Get All Test Panels
 
 **Summary:** Get available Test Panels
+<%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ```ruby
 require "uri"
@@ -19,7 +20,6 @@ puts response.read_body
 ```
 
 ```json-doc
-// not needed
 ```
 
 ```json
