add path for webhooks

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -29,6 +29,10 @@ apis:
   - webhook_endpoints
   - workflow_definitions
 
+toc_footers:
+  - <a href="/">APIs</a>
+  - <a href="/webhooks">Webhooks</a>
+
 
 search: true
 
