--- a/source/api/_project_templates.html.md.erb
+++ b/source/api/_project_templates.html.md.erb
@@ -52,7 +52,7 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | query | Associated organization | Yes | string |
+| `organizationId` | query | Associated organization | Yes | `string` |
 
 **Responses**
 
