--- a/source/api/_test_panels.html.md.erb
+++ b/source/api/_test_panels.html.md.erb
@@ -52,7 +52,7 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| project_template_id | path | Associated project_template group | Yes | string |
+| `project_template_id` | path | Associated project_template group | Yes | `string` |
 
 **Responses**
 
