--- a/source/api/_sample_labels.html.md.erb
+++ b/source/api/_sample_labels.html.md.erb
@@ -38,7 +38,7 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| project_template_id | path | Associated project_template group | Yes | string |
+| `project_template_id` | path | Associated project_template group | Yes | `string` |
 
 **Responses**
 
